# backend/handlers/feedback.go
@@ -20,22 +20,28 @@ import (
 // @Accept       json
 // @Produce      json
 // @Param feedback body models.Feedback true "Отзыв"
+// @Param Authorization header string true "Токен в формате Bearer {token}" default(Bearer )
 // @Success      200  {object}  map[string]interface{}
 // @Failure      400  {object}  map[string]string
 // @Failure      404  {object}  map[string]string
 // @Failure      500  {object}  map[string]string
 // @Router       /api/feedback/post [post]
 func PostFeedback(c *gin.Context) {
+	userID := c.GetUint("userID")
+
 	var feedback models.Feedback
 
 	if err := c.ShouldBindJSON(&feedback); err != nil {
-		log.Print(fmt.Printf("error on parsing feedback %s", err))
+		log.Print(fmt.Printf("error on parsing feedback %s", err.Error()))
 		c.JSON(http.StatusBadRequest, gin.H{
 			"error": "error on parsing feedback",
 		})
 
 		return 
 	}
+
+	log.Printf("userID: %d", userID)
+	feedback.UserID = userID
 
 	if err := postgres.DB.Create(&feedback).Error; err != nil {
 		log.Print(fmt.Printf("error on creating feedback %s", err))
@@ -47,7 +53,7 @@ func PostFeedback(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, gin.H{
-		"message":"feedbacked created successfully",
+		"message":"feedback created successfully",
 	})
 }
 
@@ -92,47 +98,3 @@ func GetFeedbacks(c *gin.Context) {
 	c.JSON(http.StatusOK, feedbacks)
 }
 
-// GetRating godoc
-// @Summary      Возвращает рейтинг
-// @Description  Возвращает средний рейтинг всех отзывов на товар
-// @Tags         Feedback
-// @Accept       json
-// @Produce      json
-// @Param product_id query uint true "ID товара"
-// @Success      200  {object}  map[string]interface{}
-// @Failure      400  {object}  map[string]string
-// @Failure      404  {object}  map[string]string
-// @Failure      500  {object}  map[string]string
-// @Router       /api/feedback/get_rating [get]
-func GetRating(c *gin.Context) {
-	productIDString := c.Query("product_id")
-
-	productID, err := strconv.Atoi(productIDString)
-
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error":"error on parsing product id",
-		})
-		return
-	}
-	
-	var rating float64
-	if err := postgres.DB.Model(&models.Feedback{}).Where("product_id = ?", productID).Select("COALESCE(AVG(rating), 0)").Scan(&rating).Error; err != nil {
-		switch {
-		case errors.Is(err, gorm.ErrRecordNotFound):
-			c.JSON(http.StatusOK, gin.H{
-				"rating":0,
-			})
-		default:
-			log.Print(err)
-			c.JSON(http.StatusInternalServerError, gin.H{
-				"error":"error on getting feedback",
-			})
-		}
-		return
-	}
-
-	c.JSON(http.StatusOK, gin.H{
-		"rating":rating,
-	})
-}
